Fix minor layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -228,6 +228,8 @@ form {
 	margin-bottom: 8.6em;
 	border-radius: 24px;
 	max-width: 340px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .card--featured {
@@ -340,8 +342,8 @@ form {
 	top: 50%;
 	transform: translateY(-50%);
 	right: 51%;
-	height: 178px;
-	width: 178px;
+	height: 170px;
+	width: 170px;
 }
 
 .image-wrapper--2 {
